added triggers on merge, on pull request and on push on main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,10 @@ name: Rust Build and Test
 on:
   pull_request:
     branches: [ main ]
+  merge:
+    branches: [ main ]
+  push:
+    branches: [ main ]
 
 jobs:
   build:
