--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "snip"
 version = "0.1.0"
 edition = "2021"
-authors = ["Rustacean <codeitlikemiley@gmail.com>"]
+authors = ["Uriah G. <codeitlikemiley@gmail.com>"]
 description = "A CLI tool for managing Neovim LuaSnip Rust snippets"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
