--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "snip"
+name = "snipr"
 version = "0.1.0"
 edition = "2021"
 authors = ["Uriah G. <codeitlikemiley@gmail.com>"]
-description = "A CLI tool for managing Neovim LuaSnip Rust snippets"
-
+description = "A CLI tool (snipr) for managing Neovim and  VSCode snippets"
+readme = "README.md"
+license = "MIT"
+keywords = ["neovim", "snippets", "rust", "cli", "vscode"]
+categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -19,14 +22,16 @@ dirs-next = "2.0.0"
 dotenv = { version = "0.15.0", features = ["clap"] }
 
 [package.metadata.bundle]
-name = "snip" # The name of your application
-identifier = "com.codeitlikemiley.snip" # The bundle identifier of your application
+name = "snipr" # The name of your application
+identifier = "com.codeitlikemiley.snipr" # The bundle identifier of your application
 copyright = "Copyright (c) codeitlikemiley 2023. All rights reserved."
 category = "Developer Tool"
-short_description = "A CLI tool for managing Neovim LuaSnip Rust snippets"
-long_description = "A CLI tool for managing Neovim LuaSnip Rust snippets"
+short_description = "A CLI tool for managing Neovim and VSCode snippets"
+long_description = "A CLI tool for managing Neovim and VSCode snippets"
 version = "0.1.0" # Version of your application
-osx_url_schemes = ["com.codeitlikemiley.snip"] # URL schemes your application supports
+osx_url_schemes = [
+  "com.codeitlikemiley.snipr",
+] # URL schemes your application supports
 script = "scripts/postinstall" # Path to your postinstall script
 
 [profile.release]
